--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18"
